--- a/to-doLISt/index.html
+++ b/to-doLISt/index.html
@@ -11,7 +11,13 @@
   <title>ToDo App</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
+<style>
+  .container{
+    position: relative;
+    right: 300px;
+    top: 100px;
+  }
+</style>
 <body>
   <div class="container">
     <h1>ADD TODO LIST</h1>
