Updated footer and some CSS properties

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   
   <style>
+    body{
+      padding:2%;
+      margin:5px;
+      color:Grey;
+      font-size: 24px;
+      text-align: center;
+    }
     .carousel {
       height: 40em;
     }
@@ -27,6 +34,7 @@
       padding: 40px 0;
       background-color: #ffffff;
       color: #4b4c4d;
+      
     }
 
     .footer-basic ul {
@@ -290,11 +298,11 @@
             class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-pinterest"></i></a><a
           href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-youtube"></i></div>
       <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
-        <li class="list-inline-item"><a href="#">Services</a></li>
+        <li class="list-inline-item"><a href="#home">Home</a></li>
+        <li class="list-inline-item"><a href="#services">Services</a></li>
         <li class="list-inline-item"><a href="./about.html">About</a></li>
-        <li class="list-inline-item"><a href="#">Terms</a></li>
-        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+        <li class="list-inline-item"><a href="#terms">Terms</a></li>
+        <li class="list-inline-item"><a href="#privacypolicy">Privacy Policy</a></li>
       </ul>
       <p class="copyright">CountdownTimer © 2021</p>
     </footer>
