--- a/Pages/Musicapp/index.html
+++ b/Pages/Musicapp/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <h2>Playing <Span id="currentInstrument"></Span></h2>
+    <h2>Instruments Playing <Span id="currentInstrument"></Span></h2>
+    <h3>Some different types of instruments are :</h3>
     <div id="main-container">
         <div class="music-card" onclick="instrumentSound('Drum')">
             <img src=" ./images/drums-308752_640.png" alt="drum img" width="250px">
