--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   
   <style>
     .carousel {
-      height: 40em;
+      height: 40rem;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
 
     .footer-basic {
