--- a/about.html
+++ b/about.html
@@ -84,6 +84,7 @@
       justify-content: center;
       position: relative;
       left: 20vw;
+      color: ghostwhite;
     }
 
     .contents {
@@ -92,11 +93,12 @@
       position: relative;
       left: 20vw;
       margin-right: 50vw;
+      color: snow;
     }
 
     .linkhome {
       text-decoration: none;
-      color: black;
+      color: rgb(188, 132, 132);
     }
   </style>
 </head>
