--- a/about.html
+++ b/about.html
@@ -80,18 +80,25 @@
     }
 
     .heading {
-      display: block;
-      justify-content: center;
-      position: relative;
-      left: 20vw;
+     text-align:center;
     }
 
     .contents {
-      display: block;
+      width:45%;
+      background:white;
+      text-align:center;
+      padding:20px;
+    }
+
+    .contents-box{
+      display:flex;
       justify-content: center;
-      position: relative;
-      left: 20vw;
-      margin-right: 50vw;
+    }
+
+    .about-us{
+      display:flex;
+      flex-direction:column;
+      justify-content: center;
     }
 
     .linkhome {
@@ -151,6 +158,7 @@
   <div class="about-us">
     <h1 class="heading">About Us</h1>
     <br>
+    <div class="contents-box">
     <p class="contents">Countdown Timer is a website that manages your time in the most efficient yet sophisticated way.
       It offers various apps to do the same, like for example, timer manager app, to do app.
       It takes a lot of care that you finish your work in time, and not miss out assignments due to paucity of time.
@@ -172,6 +180,7 @@
 
 
     </p>
+    </div>
   </div>
   <div class="carousel">
     <img src="https://source.unsplash.com/1600x900/?quote" alt="quote" class="slide active fade" />
