--- a/index.html
+++ b/index.html
@@ -204,6 +204,19 @@
         <h2>lofi-beats</h2>
       </div>
     </div>
+    <div class="card1">
+      <div class="face face1">
+        <div class="content">
+          <span class="stars"></span>
+          <h2 class="python">Online Notepad</h2>
+          <p class="python"> Create, edit, and share your notes easily.</p>
+          <a href="Pages\Notepad\notepad.html" class="goto-btn">Open</a>
+        </div>
+      </div>
+      <div class="face face2">
+        <h2>Online Notepad</h2>
+      </div>
+    </div>
   </div>
 
   <script>
