Making many requireed changes , css and links improvement , better user experience

--- a/LOGIN/LogIn.html
+++ b/LOGIN/LogIn.html
@@ -75,7 +75,7 @@
 
             </div>
             <button type="submit" onClick="return false;">Log in</button>
-            <a href="/index.html" class="discrete" target="_blank">Home</a>
+            <a href="../index.html" class="discrete">Home</a>
         </form>
     </div>
 
