--- a/about.html
+++ b/about.html
@@ -131,9 +131,9 @@
             <li class="subitem"><a href="#">Enterprise</a></li>
           </ul>
         </li>
-        <li class="item"><a href="#">Blog</a></li>
+        <li class="item"><a href="blog.html">Blog</a></li>
         <li class="item"><a href="./contact.html">Contact</a></li>
-        <li class="item button button1"><a href="/LOGIN/LogIn.html">Log In</a></li>
+        <li class="item button button1"><a href="../CountdownTimer/LOGIN/LogIn.html">Log In</a></li>
       </div>
       <div>
         <li class="item searched d-flex my-2">
@@ -285,11 +285,14 @@
   </script>
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i
-            class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-pinterest"></i></a><a
-          href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-youtube"></i></div>
+      <div class="social"><a href="https://www.instagram.com/"><i class="icon ion-social-instagram"></i></a>
+        <a href="https://in.linkedin.com/"><i class="icon ion-social-linkedin"></i></a>
+        <a href="https://in.pinterest.com/"><i class="icon ion-social-pinterest"></i></a>
+        <a href="https://www.facebook.com/"><i class="icon ion-social-facebook"></i></a>
+        <a href="https://www.youtube.com/"><i class="icon ion-social-youtube"></i>
+        </div>
       <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="index.html">Home</a></li>
         <li class="list-inline-item"><a href="#">Services</a></li>
         <li class="list-inline-item"><a href="./about.html">About</a></li>
         <li class="list-inline-item"><a href="#">Terms</a></li>
