--- a/blog.html
+++ b/blog.html
@@ -144,7 +144,7 @@
 
   <section>
     <div class="blogs">
-        <h2 style="text-align: center; color:white; border-bottom: 2px solid white; border-top: 2px solid white;padding: 1.2rem;">Blog Section</h2>
+        <h2 style="text-align: center; color:white; border-bottom: 5px solid black; border-top: 2px solid black;padding: 1.2rem;">Blog Section</h2>
         <div class="card-container">
             <div class="card">
                <div class="image">
@@ -325,11 +325,15 @@
   </script>
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i
-            class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-pinterest"></i></a><a
-          href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-youtube"></i></div>
+      <div class="social">
+        <a href="https://www.instagram.com/"><i class="icon ion-social-instagram"></i></a>
+        <a href="https://in.linkedin.com/"><i class="icon ion-social-linkedin"></i></a>
+        <a href="https://in.pinterest.com/"><i class="icon ion-social-pinterest"></i></a>
+        <a href="https://www.facebook.com/"><i class="icon ion-social-facebook"></i></a>
+        <a href="https://www.youtube.com/"><i class="icon ion-social-youtube"></i>
+        </div>
       <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="index.html">Home</a></li>
         <li class="list-inline-item"><a href="#">Services</a></li>
         <li class="list-inline-item"><a href="./about.html">About</a></li>
         <li class="list-inline-item"><a href="#">Terms</a></li>
