--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
       <li class="logo"><img src="Countdown.png" alt="Logo" height="80px" width="80px" style="border-radius: 50px;"></li>
       </div>
       <div class="links">
-      <li class="item"><a href="#">Home</a></li>
+      <li class="item"><a href="index.html">Home</a></li>
       <li class="item"><a href="./about.html">About</a></li>
       <li class="item has-submenu">
         <a class="submenu-title" tabindex="0">Services</a>
@@ -111,7 +111,7 @@
           <li class="subitem"><a href="#">Enterprise</a></li>
         </ul>
       </li>
-      <li class="item"><a href="#">Blog</a></li>
+      <li class="item"><a href="blog.html">Blog</a></li>
       <li class="item"><a href="./contact.html">Contact</a></li>
       <li class="item button button1"><a href="#">Log In</a></li>
     </div>
@@ -320,11 +320,15 @@
   </script>
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i
-            class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-pinterest"></i></a><a
-          href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-youtube"></i></div>
+      <div class="social">
+        <a href="https://www.instagram.com/"><i class="icon ion-social-instagram"></i></a>
+        <a href="https://in.linkedin.com/"><i class="icon ion-social-linkedin"></i></a>
+        <a href="https://in.pinterest.com/"><i class="icon ion-social-pinterest"></i></a>
+        <a href="https://www.facebook.com/"><i class="icon ion-social-facebook"></i></a>
+        <a href="https://www.youtube.com/"><i class="icon ion-social-youtube"></i>
+        </div>
       <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="index.html">Home</a></li>
         <li class="list-inline-item"><a href="#">Services</a></li>
         <li class="list-inline-item"><a href="./about.html">About</a></li>
         <li class="list-inline-item"><a href="#">Terms</a></li>
