--- a/index.html
+++ b/index.html
@@ -299,11 +299,13 @@
   </script>
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i
-            class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-pinterest"></i></a><a
-          href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-youtube"></i></div>
+      <div class="social"><a href="https://www.instagram.com/"><i class="icon ion-social-instagram"></i></a>
+        <a href="https://in.linkedin.com/"><i class="icon ion-social-linkedin"></i></a>
+        <a href="https://in.pinterest.com/"><i class="icon ion-social-pinterest"></i></a>
+        <a href="https://www.facebook.com/"><i class="icon ion-social-facebook"></i></a>
+        <a href="https://www.youtube.com/"><i class="icon ion-social-youtube"></i></div>
       <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="index.html">Home</a></li>
         <li class="list-inline-item"><a href="#">Services</a></li>
         <li class="list-inline-item"><a href="./about.html">About</a></li>
         <li class="list-inline-item"><a href="#">Terms</a></li>
