--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="newstyle.css">
 
   <style>
     .footer-basic {
@@ -97,6 +98,30 @@
     .linkhome {
       text-decoration: none;
       color: black;
+    }
+    .card{
+    border: 2px solid grey;
+    box-shadow: rgba(0, 0, 0, 0.85) 0px 5px 15px;
+    padding: 15px;
+    }
+    .card h3{
+        text-align: center;
+        text-shadow: rgb(0, 85, 255,0.3) 1px 0 10px;
+        font-weight: bold;
+    }
+    .card div{
+        text-align: center;
+    }
+    .card:hover{
+        transform:translateY(-25px);
+        transition: transform 320ms ease-out 50ms; 
+    }
+    .goto-btn{
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        padding: 4px 15px 4px 15px;
+    }
+    .card-content div{
+        margin: 8px;
     }
   </style>
 </head>
